testing/tests/ui/break_outside_of_loop.stderr
error: the previous template error derives from
 --> tests/ui/break_outside_of_loop.rs:5:5
  |
5 |     source = "Have a {%break%}, have a parsing error!",
  |     ^^^^^^
